--- a/quinzena3/sistema-loja/ctrl-estoque.html
+++ b/quinzena3/sistema-loja/ctrl-estoque.html
@@ -5,19 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Controle de Estoque</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
 </head>
+
 <body>
-    <div>
+
+    <div class="estabelecimento">
         <h1>FeBrigadeiros</h1>
     </div>
-    <div>
+    
+    <div class="div-menu">
         <a href="index.html">Página Inicial</a>
         <a href="ctrl-estoque.html">Controle de Estoque</a>
         <a href="add-produto.html">Adicionar Produto</a>
         <a href="funcionarios.html">Funcionários</a>
     </div>
-
-
     
     <h2>Controle de Estoque</h2>
 
@@ -71,6 +73,14 @@
         </tr>
 
     </table>
+
+
+    <div class="redes">
+        <footer>
+        <a href="">Instagram</a>
+        <a href="">Facebook</a>
+        <a href="">Whatsapp</a>
+    </footer>
 
 </body>
 </html>
