--- a/quinzena3/sistema-loja/funcionarios.html
+++ b/quinzena3/sistema-loja/funcionarios.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Funcionários</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
 </head>
+
 <body>
-    <div>
+
+    <div class="estabelecimento">
         <h1>FeBrigadeiros</h1>
     </div>
     
-    <div>
+    <div class="div-menu">
         <a href="index.html">Página Inicial</a>
         <a href="ctrl-estoque.html">Controle de Estoque</a>
         <a href="add-produto.html">Adicionar Produto</a>
@@ -27,5 +30,13 @@
             <li>Eduardo Castanheira</li>
 
         </ul>
+
+    <div class="redes">
+        <footer>
+        <a href="">Instagram</a>
+        <a href="">Facebook</a>
+        <a href="">Whatsapp</a>
+    </footer>
+
 </body>
 </html>
