--- a/quinzena3/bugfixes/exercicio-bugfixes/home.html
+++ b/quinzena3/bugfixes/exercicio-bugfixes/home.html
@@ -14,8 +14,10 @@
     <h2>For Ever 4</h2>
     <div>
         <div class="container" id="container-de-descricao">
-            <br><br><br><br><br>
-            <p> Somos uma empresa focada em tornar a compra de roupas mais fácil </p>
+            <br><br><br><br>
+            <p> Somos uma empresa focada</p>
+            <p>em tornar a compra de</p>
+            <p>roupas mais fácil</p> 
             <ol>
                 <li> Ache os melhores descontos </li>
                 <li> Busque pelos seus gostos</li>
